--- a/hocon/_root.conf
+++ b/hocon/_root.conf
@@ -1,15 +1,14 @@
 # _root.conf
 # project specific parameters
-site_root: "https://optgeo.github.io/sh2"
+#site_root: "https://optgeo.github.io/sh2"
 #site_root: "https://hfu.serveousercontent.com"
-#site_root: "http://localhost:9966"
+site_root: "http://localhost:9966"
 site_root: ${?SITE_ROOT}
 # center: [lng, lat]
 center: [
-  174.786987
-  -41.314950
+  288.257440
+  -48.450578
 ]
 zoom: 11
 sprite: ${site_root}"/sprite/sprite"
 glyphs: ${site_root}"/font/{fontstack}/{range}.pbf"
-
